--- a/chat/macos/Runner/Configs/AppInfo.xcconfig
+++ b/chat/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = chat
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.chat
+PRODUCT_BUNDLE_IDENTIFIER = com.app.jffc.chat
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2023 com.app.jffc. All rights reserved.
