--- a/chat/windows/runner/Runner.rc
+++ b/chat/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.app.jffc" "\0"
             VALUE "FileDescription", "chat" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "chat" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.app.jffc. All rights reserved." "\0"
             VALUE "OriginalFilename", "chat.exe" "\0"
             VALUE "ProductName", "chat" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
